--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>Inscripto</title>
   </head>
 
   <body>
